# gtd-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.sh  index.html
.github/workflows/: pages.yml
examples/: gtd-system-explained.html
examples/sample-data/: areas.md  goals.md  projects.md  purpose.md  triggerlist.md  vision.md
examples/sample-data/weekly/: 2026-06-27.md
examples/weekly/: 2026-06-27.md
src/: data.rs  main.rs
src/commands/: agendas.rs  altitudes.rs  areas.rs  calendar.rs  goals.rs  mod.rs  partner.rs  projects.rs  purpose.rs  review.rs  someday_maybe.rs  summary.rs  trigger.rs  vision.rs  waiting_for.rs
src/ui/: mod.rs
