[package]
name = "gtd"
version = "0.1.1"
edition = "2021"
description = "GTD CLI — morning/evening review, inbox, projects, weekly assessment"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
base64 = "0.22"
